# trackboard

./: .env.example  .gitignore  404.html  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.txt  rebuild_history.sh  render.yaml
404/: index.html
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a86c676aa1e4_initial_full_schema.py  b1c2d3e4f5a6_serious_v1_fields.py
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/api/: ai.py  auth.py  codegen.py  comments.py  dlq.py  global_properties.py  health.py  integrations.py  merge_requests.py  org_settings.py  plans.py  router.py  tracking_plans.py  validation.py  versions.py  ws.py
apps/api/app/core/: database.py  exceptions.py  permissions.py  redis.py  secret_store.py  security.py  url_safety.py
apps/api/app/models/: __init__.py
apps/api/app/schemas/: auth.py  integration.py  merge_request.py  org_settings.py  tracking_plan.py
apps/api/app/services/: ai_service.py  apikey_service.py  audit_service.py  auth_service.py  codegen_service.py  import_service.py  merge_service.py  search_service.py  snapshot_service.py  validation_service.py  webhook_service.py
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  helpers.py  test_api_keys.py  test_auth.py  test_codegen.py  test_health.py  test_merge_requests.py  test_security_boundaries.py  test_security_config.py  test_tracking_plans.py  test_validation.py  test_validation_engine.py  test_version_compatibility.py  test_versions.py
docs/: api-reference.md
login/: index.html  index.txt
plans/: index.html  (+1 more)
(+117 files in other folders)
