[project]
name = "trackboard-api"
version = "0.1.0"
description = "Trackboard — Open-Source Tracking Plan Manager API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "slowapi>=0.1.9",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "alembic/versions",
    "app/api/global_properties.py",
    "app/api/integrations.py",
    "app/api/tracking_plans.py",
    "app/services/ai_service.py",
    "app/services/vcs_service.py",
    "app/services/webhook_service.py",
    "scripts/seed.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
